[package]
name = "crml-erc20-peg"
version = "1.0.0"
edition = "2018"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Module for bridging ERC20 tokens"
license = "GPL-3.0"

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", default-features = false, optional = true }
ethereum-types = { version = "0.12", default-features = false, features = ["serialize", "codec"] }
ethabi = { version = "14.1.0", default-features = false }

cennznet-primitives = { path = "../../primitives", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["impl-codec", "impl-serde"] }
crml-support = { path = "../support", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"ethereum-types/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"primitive-types/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std"
]
