[package]
name = "crml-erc20-peg"
version = "1.0.0"
edition = "2018"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Module for bridging ERC20 tokens"
license = "GPL-3.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.126", default-features = false, optional = true }

cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/cennznet/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
crml-generic-asset = { path = "../generic-asset" }
hex-literal = { version = "0.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"cennznet-primitives/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std"
]
