[package]
name = "crml-eth-bridge"
version = "1.0.0"
edition = "2018"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Module for bridging ERC20 tokens"
license = "GPL-3.0"

[dependencies]
parking_lot = "0.11"
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
ethereum-types = { version = "0.12", default-features = false, features = ["serialize"] }

cennznet-primitives = { path = "../../primitives", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["impl-codec", "impl-serde"] }
crml-support = { path = "../support", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }
sp-application-crypto = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "v3.0.0-rc7", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde_json/std",
	"ethereum-types/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"primitive-types/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std"
]
