[package]
name = "crml-eth-bridge"
version = "1.0.0"
edition = "2018"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Module for bridging Ethereum events"
license = "GPL-3.0"

[dependencies]
parking_lot = "0.11.1"
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
ethereum-types = { version = "0.12", default-features = false, features = ["serialize", "codec"] }
hex = { version = "0.4.3", default-features = false }

cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde_json/std",
	"ethereum-types/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std"
]
