[package]
name = "crml-eth-state-oracle"
version = "1.0.0"
edition = "2018"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Pallet for state requests to Ethereum"
license = "GPL-3.0"

[dependencies]
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
ethereum-types = { version = "0.12.1", default-features = false, features = ["serialize", "codec"] }

cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"ethereum-types/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]