[package]
name = "crml-eth-state-oracle"
version = "1.0.1"
edition = "2021"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Pallet for state requests to Ethereum"
license = "GPL-3.0"

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false, features = ["serialize", "codec"] }

cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }

# Substrate packages
crml-generic-asset = { path = "../generic-asset", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }

[dev-dependencies]
ethabi = { version = "16.0.0", default-features = false }
hex-literal = { version = "0.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"ethereum-types/std",
	"cennznet-primitives/std",
	"crml-generic-asset/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]