[package]
name = "crml-eth-wallet"
version = "2.0.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet for eth_sign extrinsics"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
crml-support = { path = "../support", default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0" }
pallet-balances = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }
sp-keyring = { git = "https://github.com/cennznet/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default_features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "crml-support/std",
    "cennznet-primitives/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std"
]
