[package]
name = "crml-generic-asset"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/cennznet/cennznet"
description = "A runtime module for managing ERC-20 like fungible assets"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }

[features]
default = ["std"]
std =[
	"codec/std",
	"serde/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]