[package]
name = "crml-governance"
version = "2.0.1"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/cennznet/cennznet"
description = "A runtime module for decentralized governance of the CENNZnet protocol"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true, default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset"}
sp-io = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341"}
sp-core = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341"}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"cennznet-primitives/std",
	"crml-support/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"scale-info/std",
]
