[package]
name = "crml-nft"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet NFT module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false, features = ["derive"], optional = true }
log = { version = "0.4.14", default-features = false }
variant_count = "1.0.0"
hex = { version = "0.4.3", default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }
frame-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false, optional = true }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false  }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"cennznet-primitives/std",
	"crml-support/std",
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
