[package]
name = "crml-nft"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet NFT module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false, features = ["derive"], optional = true }
log = { version = "0.4.14", default-features = false }
variant_count = "1.0.0"
hex = { version = "0.4.3", default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
frame-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, optional = true }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"cennznet-primitives/std",
	"crml-support/std",
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]

fixedPrice sale
0x01813e0000204bbc0000000000000000000000000094ca00008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a480400000000000000000000000000
decodes fine
 api.createType('CrmlNftListing', '0x01813e0000204bbc0000000000000000000000000094ca00008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a480400000000000000000000000000').toHuman()
{
  Auction: {
    paymentAsset: '16,001',
    reservePrice: '12,340,000',
    close: '51,860',
    seller: '5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty',
    tokens: [ [Array] ],
    royaltiesSchedule: { entitlements: [] },
    marketplaceId: null
  }
}

// removing fc gives empty tokens..

 api.createType('CrmlNftListing', '0x01813e0000204bbc0000000000000000000000000094ca00008eaf04151687736326c9fea17e255287613693c912909cb226aa4794f26a480400000000000000000000000000').toHuman()

>  api.createType('CrmlNftListing', '0x01813e0000204bbc0000000000000000000000000094ca00008eaf04151687736326c9fea17e255287613693c912909cb226aa4794f26a480400000000000000000000000000').toHuman()
{
  Auction: {
    paymentAsset: '16,001',
    reservePrice: '12,340,000',
    close: '51,860',
    seller: '5FHneW46xGXgs5mUiveU2WPtfsjh8n796e7rne3NpNEeZWnn',
    tokens: [],
    royaltiesSchedule: { entitlements: [] },
    marketplaceId: null
  }
}