[package]
name = "crml-nft"
version = "2.0.1"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet NFT module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false, features = ["derive"], optional = true }
variant_count = "1.0.0"
hex = { version = "0.4.3", default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "76522d7937ba94ff1becef4e4e3ca78e3e1de341", default-features = false  }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"cennznet-primitives/std",
	"crml-support/std",
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]
