[package]
name = "crml-rewards"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet rewards pallet"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-io = { default-features = false, git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-runtime = { default-features = false, git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
frame-support = { default-features = false, git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
frame-system = { default-features = false, git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
cennznet-primitives = { default-features = false, path = "../../primitives" }
# pulling in directly as it's not available in plug yet
sp-arithmetic = { version = "2.0.0-rc6", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"cennznet-primitives/std",
]
